--- a/.github/workflows/update-cookie.yml
+++ b/.github/workflows/update-cookie.yml
@@ -1,4 +1,4 @@
-name: Update __hdnea__ cookie everywhere in auto.m3u
+name: Update tokens (__hdnea__ + hdntl) in auto.m3u
 
 on:
   schedule:
@@ -6,36 +6,50 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-cookie:
+  update-tokens:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
 
-    - name: Download source m3u and extract cookie
+    - name: Fetch remote playlists and extract cookies
       run: |
-        curl -L -o source.m3u "https://raw.githubusercontent.com/alex4528/m3u/refs/heads/main/jstar.m3u"
+        # Fetch JioTV playlist (for __hdnea__)
+        curl -sL -o jio.m3u "https://raw.githubusercontent.com/alex4528/m3u/refs/heads/main/jstar.m3u"
+        jio_cookie_line=$(grep -m1 '#EXTHTTP' jio.m3u)
+        jio_cookie=$(echo "$jio_cookie_line" | grep -o '__hdnea__=[^"]*')
 
-        cookie_line=$(grep -m1 '#EXTHTTP' source.m3u)
-        new_cookie=$(echo "$cookie_line" | grep -o '__hdnea__=[^"]*')
+        echo "$jio_cookie_line" > jio_cookie_line.txt
+        echo "$jio_cookie" > jio_cookie.txt
 
-        echo "$cookie_line" > cookie_line.txt
-        echo "$new_cookie" > new_cookie.txt
+        # Fetch Zee5 playlist (for hdntl)
+        curl -sL -o zee.m3u "https://raw.githubusercontent.com/alex4528/m3u/refs/heads/main/z5.m3u"
+        zee_hdntl=$(grep -o 'hdntl=[^"]*' zee.m3u | head -n1)
 
-    - name: Replace cookie in auto.m3u
+        echo "$zee_hdntl" > zee_hdntl.txt
+
+    - name: Replace both tokens in auto.m3u
       run: |
-        new_cookie=$(cat new_cookie.txt)
-        new_json=$(cat cookie_line.txt)
+        jio_cookie=$(cat jio_cookie.txt)
+        jio_json=$(cat jio_cookie_line.txt)
+        zee_hdntl=$(cat zee_hdntl.txt)
 
-        awk -v cookie="$new_cookie" -v jsonline="$new_json" '
+        awk -v jio="$jio_cookie" -v jsonline="$jio_json" -v zee="$zee_hdntl" '
           {
+            # Replace JioTV cookie line
             if ($0 ~ /^#EXTHTTP:/) {
               print jsonline;
               next;
             }
-            gsub(/__hdnea__=[^&"]+/, cookie);
-            gsub(/cookie=__hdnea__%3D[^&"]+/, "cookie=" cookie); # encoded
+
+            # Replace Jio __hdnea__ tokens
+            gsub(/__hdnea__=[^&"]+/, jio);
+            gsub(/cookie=__hdnea__%3D[^&"]+/, "cookie=" jio); # URL-encoded part
+
+            # Replace Zee5 hdntl token
+            gsub(/hdntl=[^&"]+/, zee);
+
             print;
           }
         ' auto.m3u > temp.m3u && mv temp.m3u auto.m3u
@@ -47,5 +61,5 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add auto.m3u
-        git commit -m "Update cookie (__hdnea__) in EXTHTTP and MPD URLs" || echo "No changes"
+        git commit -m "Update tokens (__hdnea__ + hdntl) in auto.m3u" || echo "No changes"
         git push origin HEAD:main
